Config để chạy bằng jdk17